--- a/QL_CDC-master/QL_CDC/Views/Admin/BaiKhongDuyet.cshtml
+++ b/QL_CDC-master/QL_CDC/Views/Admin/BaiKhongDuyet.cshtml
@@ -2,9 +2,9 @@
 
 @{ Layout = "AdminLayout"; }
 <div class="container-xxl flex-grow-1 container-p-y">
-    <h4 class="fw-bold py-3 mb-4"><span class="text-muted fw-light">Quản lý /</span>Danh sách sản phẩm không được duyệt</h4>
+    <h4 class="fw-bold py-3 mb-4"><span class="text-muted fw-light">Quản lý /</span> Quán lý bài đăng sản phẩm</h4>
     <div class="card">
-        <h5 class="card-header">Danh sách người dùng</h5>
+        <h5 class="card-header">Danh sách bài đăng không duyệt</h5>
         <div class="table-responsive text-nowrap">
             <div class="table-responsive text-nowrap">
                 <table class="table table-hover">
