--- a/QL_CDC-master/QL_CDC/Views/TaiKhoan/DangKy.cshtml
+++ b/QL_CDC-master/QL_CDC/Views/TaiKhoan/DangKy.cshtml
@@ -5,7 +5,7 @@
 }
 
 <link href="/template/css/style.css" rel="stylesheet">
-<div class="container-fluid mb-5">
+@*<div class="container-fluid mb-5">
     <div class="row border-top px-xl-5">
         <div class="col-lg-12">
             <nav class="navbar navbar-expand-lg bg-light navbar-light py-3 py-lg-0 px-0">
@@ -142,7 +142,177 @@
             </form>
         </div>
     </div>
-</div>
+</div>*@
 <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-2.2.0.min.js"></script>
 <script src="https://ajax.aspnetcdn.com/ajax/jquery.validate/1.16.0/jquery.validate.min.js"></script>
 <script src="https://ajax.aspnetcdn.com/ajax/jquery.validation.unobtrusive/3.2.6/jquery.validate.unobtrusive.min.js"></script>
+
+
+<script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-2.2.0.min.js"></script>
+<script src="https://ajax.aspnetcdn.com/ajax/jquery.validate/1.16.0/jquery.validate.min.js"></script>
+<script src="https://ajax.aspnetcdn.com/ajax/jquery.validation.unobtrusive/3.2.6/jquery.validate.unobtrusive.min.js"></script>
+
+
+<html lang="en"
+      class="light-style customizer-hide"
+      dir="ltr"
+      data-theme="theme-default"
+      data-assets-path="/template/sneat/assets/"
+      data-template="vertical-menu-template-free">
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport"
+          content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0" />
+
+    <title>Chợ rao vặt sinh viên</title>
+    <link rel="icon" type="image/x-icon" href="/template/sneat/assets/img/favicon/icon01.png" />
+
+    <meta name="description" content="" />
+
+    <!-- Favicon -->
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Public+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
+          rel="stylesheet" />
+
+    <!-- Icons. Uncomment required icon fonts -->
+    <link rel="stylesheet" href="/template/sneat/assets/vendor/fonts/boxicons.css" />
+
+    <!-- Core CSS -->
+    <link rel="stylesheet" href="/template/sneat/assets/vendor/css/core.css" class="template-customizer-core-css" />
+    <link rel="stylesheet" href="/template/sneat/assets/vendor/css/theme-default.css" class="template-customizer-theme-css" />
+    <link rel="stylesheet" href="/template/sneat/assets/css/demo.css" />
+
+    <!-- Vendors CSS -->
+    <link rel="stylesheet" href="/template/sneat/assets/vendor/libs/perfect-scrollbar/perfect-scrollbar.css" />
+
+    <!-- Page CSS -->
+    <!-- Page -->
+    <link rel="stylesheet" href="/template/sneat/assets/vendor/css/pages/page-auth.css" />
+    <!-- Helpers -->
+    <script src="/template/sneat/assets/vendor/js/helpers.js"></script>
+
+    <!--! Template customizer & Theme config files MUST be included after core stylesheets and helpers.js in the <head> section -->
+    <!--? Config:  Mandatory theme config file contain global vars & default theme options, Set your preferred theme option in this file.  -->
+    <script src="/template/sneat/assets/js/config.js"></script>
+</head>
+
+<body>
+    <div class="container-xxl" >
+        <div class="authentication-wrapper authentication-basic container-p-y">
+            <div class="authentication-inner">
+                <div class="card">
+                    <div class="card-body">
+                        <div class="app-brand justify-content-center">
+                            <a href="index.html" class="app-brand-link gap-2">
+                                <span class="app-brand-logo demo">
+
+                                </span>
+                                <a href="@Url.Action("Index","SanPham")" class="text-decoration-none">
+                                    <h2 class="m-0 display-5 font-weight-semi-bold"><span class="text-primary font-weight-bold "><img src="~/template/img/LogoSV2.png" height="80px" /></span></h2>
+                                </a>
+                            </a>
+                        </div>
+                        <form class="mb-3" asp-action="DangKy" method="post">
+                            <div class="mb-3">
+                                <label for="email" class="form-label">Tài khoản</label>
+                                <input type="text"
+                                       class="form-control"
+                                       id="mssv"
+                                       asp-for="MSSV"
+                                       autofocus />
+                            </div>
+                            <div class="mb-3">
+                                <label for="email" class="form-label">Họ & tên</label>
+                                <input type="text"
+                                       class="form-control"
+                                       id="hoten"
+                                       asp-for="HoTen" />
+                            </div>
+                            <div class="mb-3 form-password-toggle">
+                                <div class="d-flex justify-content-between">
+                                    <label class="form-label" for="password">Mật khẩu</label>
+
+                                </div>
+                                <div class="input-group input-group-merge">
+                                    <input type="password"
+                                           id="mk"
+                                           class="form-control"
+                                           asp-for="MatKhau"
+                                           placeholder="&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;"
+                                           aria-describedby="password" />
+                                    <span class="input-group-text cursor-pointer"><i class="bx bx-hide"></i></span>
+                                </div>
+                            </div>
+                            <div class="mb-3 form-password-toggle">
+                                <div class="d-flex justify-content-between">
+                                    <label class="form-label" for="password">Mật khẩu</label>
+
+                                </div>
+                                <div class="input-group input-group-merge">
+                                    <input type="password"
+                                           id="xnmk"
+                                           class="form-control"
+                                           asp-for="XacNhanMatKhau"
+                                           placeholder="&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;"
+                                           aria-describedby="password" />
+                                    <span class="input-group-text cursor-pointer"><i class="bx bx-hide"></i></span>
+                                </div>
+                            </div>
+                            
+                            <div class="mb-3">
+                                <label for="email" class="form-label">Số điện thoại</label>
+                                <input type="text"
+                                       class="form-control"
+                                       id="sdt"
+                                       asp-for="SDT" />
+                            </div>
+                            <div class="mb-3">
+                                <label for="email" class="form-label">Email</label>
+                                <input type="text"
+                                       class="form-control"
+                                       id="email"
+                                       asp-for="Email" />
+                            </div>
+                            <div class="mb-3">
+                                <label for="email" class="form-label">Địa chỉ</label>
+                                <input type="text"
+                                       class="form-control"
+                                       id="dc"
+                                       asp-for="DiaChi" />
+                            </div>
+
+
+                            <div class="mb-3">
+                                <div class="form-check">
+                                    <input class="form-check-input" type="checkbox" id="terms-conditions" name="terms" />
+                                    <label class="form-check-label" for="terms-conditions">
+                                        Tôi đồng ý với
+                                        <a href="javascript:void(0);">các điều khoản</a>
+                                    </label>
+                                </div>
+                            </div>
+                            <button type="submit" class="btn btn-primary d-grid w-100">Đăng ký</button>
+                        </form>
+
+                        <p class="text-center">
+                            <span>Bạn đã có tài khoản?</span>
+                            <a href="@Url.Action("DangNhap","TaiKhoan")">
+                                <span>Đăng nhập</span>
+                            </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <script src="/template/sneat/assets/vendor/libs/jquery/jquery.js"></script>
+    <script src="/template/sneat/assets/vendor/libs/popper/popper.js"></script>
+    <script src="/template/sneat/assets/vendor/js/bootstrap.js"></script>
+    <script src="/template/sneat/assets/vendor/libs/perfect-scrollbar/perfect-scrollbar.js"></script>
+
+    <script src="/template/sneat/assets/js/main.js"></script>
+    <script async defer src="https://buttons.github.io/buttons.js"></script>
+</body>
+</html>
