--- a/QL_CDC-master/QL_CDC/Views/CuaHang/DaAn.cshtml
+++ b/QL_CDC-master/QL_CDC/Views/CuaHang/DaAn.cshtml
@@ -44,22 +44,10 @@
         </div>
     </div>
     <div class="cuahangtuychon">
-        <div class="cuahangdecor" style="margin-top:5%;margin-left:1%">
-            <i class="fa fa-pencil" onclick="CuaHangSuaSanPham('@item.masp')"></i>
-            @*<i class="fa fa-times" onclick="CuaHangXoaSanPham('@item.masp')"></i>*@
-        </div>
+        @*<div class="cuahangdecor" style="margin-top:5%;margin-left:1%">
+                <i class="fa fa-pencil" onclick="CuaHangSuaSanPham('@item.masp')"></i>
+                <i class="fa fa-times" onclick="CuaHangXoaSanPham('@item.masp')"></i>
+            </div>*@
     </div>
 </div>}
 </div>
-
-<script>
-    // Sua san pham
-    function CuaHangSuaSanPham(id) {
-        window.location.href = '/CuaHang/SuaSanPham/' + id;
-    }
-
-    // Xoa san pham - con lai = 0
-    function CuaHangAnSanPham(id) {
-
-    }
-</script>
