--- a/QL_CDC-master/QL_CDC/Views/Shared/_ThirdLayout.cshtml
+++ b/QL_CDC-master/QL_CDC/Views/Shared/_ThirdLayout.cshtml
@@ -29,8 +29,7 @@
 <body>
     @if (User.Identity.IsAuthenticated)
     {
-        @await Html.PartialAsync("../SanPham/_ChatPartial.cshtml")
-    }
+@await Html.PartialAsync("../SanPham/_ChatPartial.cshtml")}
 
     <!-- Topbar Start -->
     <div class="container-fluid">
@@ -60,35 +59,37 @@
     <!-- Topbar End -->
     <!-- Navbar Start -->
     <div class="container-fluid">
-        <div class="row border-top px-xl-5">
+        <div class="row border-top px-xl-5" style="margin-left: -70px">
             <div class="col-lg-3 d-none d-lg-block">
                 <a class="btn shadow-none d-flex align-items-center justify-content-between bg-primary text-white w-100" data-toggle="collapse" href="#navbar-vertical" style="height: 65px; margin-top: -1px; padding: 0 30px;">
-                    <h6 class="m-0" style="color: white">Danh mục sản phẩm</h6>
+                    <h6 class="m-2" style="color: white">Danh mục sản phẩm</h6>
                     <i class="fa fa-angle-down text-dark"></i>
                 </a>
                 <nav class="collapse position-absolute navbar navbar-vertical navbar-light align-items-start p-0 border border-top-0 border-bottom-0 bg-light" id="navbar-vertical" style="width: calc(100% - 30px); z-index: 1;">
-                    <div class="navbar-nav w-100 overflow-hidden" style="height: 410px" id="DMSP">
+                    <div class="navbar-nav w-100 overflow-hidden" style="height: 270px" id="DMSP">
                         <!--
-                        <div class="nav-item dropdown">
-                            <a href="#" class="nav-link danhmuc" data-toggle="dropdown">Đồ dùng cá nhân <i class="fa fa-angle-down float-right mt-1"></i></a>
-                            <div class="dropdown-menu position-absolute bg-secondary border-0 rounded-0 w-100 m-0">
-                                <a href="" class="dropdown-item">Chăn, ra, gối, nệm</a>
-                                <a href="" class="dropdown-item">Giày dép</a>
-                                <a href="" class="dropdown-item">Nón bảo hiểm</a>
-                                <a href="" class="dropdown-item">Nón vải</a>
-                                <a href="" class="dropdown-item">Quần áo</a>
-                                <a href="" class="dropdown-item">Ô, dù</a>
-                            </div>
-                        </div>
-                        -->
+                <div class="nav-item dropdown">
+                    <a href="#" class="nav-link danhmuc" data-toggle="dropdown">Đồ dùng cá nhân <i class="fa fa-angle-down float-right mt-1"></i></a>
+                    <div class="dropdown-menu position-absolute bg-secondary border-0 rounded-0 w-100 m-0">
+                        <a href="" class="dropdown-item">Chăn, ra, gối, nệm</a>
+                        <a href="" class="dropdown-item">Giày dép</a>
+                        <a href="" class="dropdown-item">Nón bảo hiểm</a>
+                        <a href="" class="dropdown-item">Nón vải</a>
+                        <a href="" class="dropdown-item">Quần áo</a>
+                        <a href="" class="dropdown-item">Ô, dù</a>
+                    </div>
+                </div>
+                -->
 
                     </div>
                 </nav>
             </div>
-            <div class="col-lg-9">
+
+           
+            <div class="col-lg-9" style="padding:3px">
                 <nav class="navbar navbar-expand-lg bg-light navbar-light py-3 py-lg-0 px-0">
                     <a href="@Url.Action("Index","SanPham")" class="text-decoration-none d-block d-lg-none">
-                        <h2 class="m-0 display-5 font-weight-semi-bold"><span class="text-primary font-weight-bold border px-3 mr-1">Chợ Sinh Viên</span></h2>
+                        <h2 class="m-0 display-5 font-weight-semi-bold"><span class="text-primary font-weight-bold border px-3 mr-1">Chợ rao vặt Sinh viên</span></h2>
                     </a>
                     <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                         <span class="navbar-toggler-icon"></span>
@@ -97,12 +98,16 @@
                         @await Html.PartialAsync("../Shared/_LoginPartial.cshtml")
                     </div>
                 </nav>
+                <div>
+                    @RenderBody()
+
+                </div>
             </div>
         </div>
     </div>
+
     <!-- Navbar End -->
 
-    @RenderBody();
 
     <!-- Footer Start -->
     <div class="container-fluid bg-secondary text-dark mt-5 pt-5">
@@ -142,7 +147,7 @@
     function TimKiemTheoTen() {
         var str = document.getElementById('timkiem').value;
         if (str == null || str == "" || !/\S/.test(str)) {
-            
+
         }
         else {
             window.location.href = '/SanPham/TimKiem?str=' + str;
@@ -184,7 +189,7 @@
                 HienDanhMuc(data)
             }
         })
-    } 
+    }
 
     // ready
     $(document).ready(function () {
