--- a/QL_CDC-master/QL_CDC/Views/TaiKhoan/ThongTinTaiKhoan.cshtml
+++ b/QL_CDC-master/QL_CDC/Views/TaiKhoan/ThongTinTaiKhoan.cshtml
@@ -13,7 +13,7 @@
             <div class="mb-4">
                 <div class="row">
                     <div class="col-md-6 form-group">
-                        <label>MSSV</label>
+                        <label>Tài khoản</label>
                         <input class="form-control" type="text" placeholder="" value="@Model.MSSV" id="input1" disabled>
                     </div>
                     <div class="col-md-6 form-group">
