--- a/QL_CDC-master/QL_CDC/Views/Admin/Index.cshtml
+++ b/QL_CDC-master/QL_CDC/Views/Admin/Index.cshtml
@@ -14,7 +14,8 @@
                             <th>Họ & tên</th>
                             <th>Số điện thoại</th>
                             <th>Email</th>
-                            <th>Lần cuối hoạt động</th>
+                            <th></th>
+                            <th>Khóa/Mở khóa</th>
                             <th>  </th>
                         </tr>
                     </thead>
@@ -22,7 +23,8 @@
                         @foreach (var item in Model)
                         {
                         <tr>
-                            <td>
+                            <td data-bs-toggle="modal"
+                                                data-bs-target="#modalCenter">
                                 @Html.DisplayFor(modelItem => item.TenHienThi)
                             </td>
                             <td>
@@ -32,10 +34,69 @@
                                 @Html.DisplayFor(modelItem => item.Email)
                             </td>
                             <td>
-                                @Html.DisplayFor(modelItem => item.LanHDCuoi)
+                                <div class="col-lg-4 col-md-6">
+                                    <div class="mt-3">
+                                        <!-- Button trigger modal -->
+                                        @*<button type="button"
+                                                class="btn btn-primary"
+                                                data-bs-toggle="modal"
+                                                data-bs-target="#modalCenter">
+                                            Chi tiết
+                                        </button>*@
+
+                                        <!-- Modal -->
+                                        <div class="modal fade" id="modalCenter" tabindex="-1" aria-hidden="true">
+                                            <div class="modal-dialog modal-dialog-centered" role="document">
+                                                <div class="modal-content">
+                                                    <div class="modal-header">
+                                                        <h5 class="modal-title" id="modalCenterTitle">Chi tiết người dùng</h5>
+                                                        <button type="button"
+                                                                class="btn-close"
+                                                                data-bs-dismiss="modal"
+                                                                aria-label="Close"></button>
+                                                    </div>
+                                                    <div class="modal-body">
+                                                        <div class="row">
+                                                            <div class="col mb-3">
+                                                                <label for="nameWithTitle" class="form-label">Name</label>
+                                                                <input type="text"
+                                                                       id="nameWithTitle"
+                                                                       class="form-control"
+                                                                       placeholder="Enter Name" />
+                                                            </div>
+                                                        </div>
+                                                        <div class="row g-2">
+                                                            <div class="col mb-0">
+                                                                <label for="emailWithTitle" class="form-label">Email</label>
+                                                                <input type="text"
+                                                                       id="emailWithTitle"
+                                                                       class="form-control"
+                                                                       placeholder="xxxx@xxx.xx" />
+                                                            </div>
+                                                            <div class="col mb-0">
+                                                                <label for="dobWithTitle" class="form-label">DOB</label>
+                                                                <input type="text"
+                                                                       id="dobWithTitle"
+                                                                       class="form-control"
+                                                                       placeholder="DD / MM / YY" />
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                    <div class="modal-footer">
+                                                        <button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal">
+                                                            Close
+                                                        </button>
+                                                        <button type="button" class="btn btn-primary">Save changes</button>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+
                             </td>
                             <td>
-                                <div class="dropdown">
+                                <div class="dropdown text-center">
                                     <button type="button" class="btn p-0 dropdown-toggle hide-arrow" data-bs-toggle="dropdown">
                                         <i class="menu-icon tf-icons bx bx-lock"></i>
                                     </button>
