--- a/QL_CDC-master/QL_CDC/Views/Shared/AdminLayout.cshtml
+++ b/QL_CDC-master/QL_CDC/Views/Shared/AdminLayout.cshtml
@@ -102,7 +102,7 @@
                     <li class="menu-item">
                         <a href="index.html" class="menu-link">
                             <i class="menu-icon tf-icons bx bx-home-circle"></i>
-                            <div data-i18n="Analytics">Trang chủ Admin</div>
+                            <div data-i18n="Analytics">Tổng quan Admin</div>
                         </a>
                         <a href="index.html" class="menu-link">
                             <i class="menu-icon tf-icons bx bx-info-circle"></i>
