--- a/QL_CDC-master/QL_CDC/Views/Shared/_SecondLayout.cshtml
+++ b/QL_CDC-master/QL_CDC/Views/Shared/_SecondLayout.cshtml
@@ -29,8 +29,7 @@
 <body>
     @if (User.Identity.IsAuthenticated)
     {
-        @await Html.PartialAsync("../SanPham/_ChatPartial.cshtml")
-    }
+@await Html.PartialAsync("../SanPham/_ChatPartial.cshtml")}
     <!-- Topbar Start -->
     <div class="container-fluid">
         <div class="row align-items-center py-3 px-xl-5">
@@ -68,6 +67,7 @@
                     <div class="navbar-nav w-100 overflow-hidden" style="height: 410px">
                         <a href="@Url.Action("DanhSachSanPham","CuaHang")" class="nav-item nav-link danhmuc">Đang bán</a>
                         <a href="@Url.Action("ChoDuyet","CuaHang")" class="nav-item nav-link danhmuc">Đợi duyệt</a>
+                        <a href="@Url.Action("DaAn","CuaHang")" class="nav-item nav-link danhmuc">Đã ẩn</a>
                         @*<a href="@Url.Action("ThemSanPham","SanPham")" class="nav-item nav-link danhmuc"><i class="icon-card" ></i>Thêm mới</a>*@
                         @*<a onclick="window.location.href = '/SanPham/ThemSanPham'" class="nav-item nav-link danhmuc">Thêm mới</a>*@
                         <a href="@Url.Action("ThemSanPham","SanPham")" class="btn shadow-none d-flex align-items-center justify-content-between bg-primary text-white w-100" style="height: 65px; margin-top: -1px; padding: 0 30px;">
@@ -75,7 +75,7 @@
                         </a>
                     </div>
                 </nav>
-                
+
             </div>
             <div class="col-lg-10">
                 <nav class="navbar navbar-expand-lg bg-light navbar-light py-3 py-lg-0 px-0">
@@ -109,7 +109,7 @@
         <div class="row border-top border-light mx-xl-5 py-4">
             <div class="col-md-6 px-xl-0">
                 <p class="mb-md-0 text-center text-md-left text-dark">
-                    &copy; <a class="text-dark font-weight-semi-bold" href="#">Chợ Rao Vặt Sinh Viên</a>.   
+                    &copy; <a class="text-dark font-weight-semi-bold" href="#">Chợ Rao Vặt Sinh Viên</a>.
                     <a class="text-dark font-weight-semi-bold" href="https://htmlcodex.com"></a>
                 </p>
             </div>
