--- a/QL_CDC-master/QL_CDC/wwwroot/template/css/style.css
+++ b/QL_CDC-master/QL_CDC/wwwroot/template/css/style.css
@@ -64,6 +64,10 @@ body {
     background-color: #fff;
 }
 
+.app{
+    background-color: burlywood;
+}
+
 [tabindex="-1"]:focus:not(:focus-visible) {
     outline: 0 !important;
 }
@@ -1253,7 +1257,7 @@ pre {
     }
 
     .offset-md-3 {
-        margin-left: 25%;
+        margin-left: 0%;
     }
 
     .offset-md-4 {
@@ -2071,7 +2075,7 @@ pre {
     color: #495057;
     background-color: #fff;
     background-clip: padding-box;
-    border: 1px solid #EDF1FF;
+    border: 3px solid #EDF1FF;
     border-radius: 0;
     transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
