--- a/QL_CDC-master/QL_CDC/Views/SanPham/_ChatPartial.cshtml
+++ b/QL_CDC-master/QL_CDC/Views/SanPham/_ChatPartial.cshtml
@@ -1,6 +1,5 @@
 ﻿
-
-<div class="chat_chat" onclick="AnHienKhungChat()" id="chat_chat"><strong id="sotn">0</strong><i class="fa fa-comments"></i></div>
+<div class="chat_chat" onclick="AnHienKhungChat()" id="chat_chat" style="width:60px"><strong id="sotn">0</strong><i class="fa fa-comments"></i></div>
 <div id="ChatChinh">
     <div id="chat_danhsach">
         
