--- a/QL_CDC-master/QL_CDC/Views/Shared/AdminLayout.cshtml
+++ b/QL_CDC-master/QL_CDC/Views/Shared/AdminLayout.cshtml
@@ -119,7 +119,13 @@
                     <li class="menu-item">
                         <a href="@Url.Action("Index","Admin")" class="menu-link">
                             <i class="menu-icon bx bx-user"></i>
-                            <div data-i18n="Analytics" >Quản lí người dùng</div>
+                            <div data-i18n="Analytics">Quản lí người dùng</div>
+                        </a>
+                    </li>
+                    <li class="menu-item">
+                        <a href="@Url.Action("ChartTheoLoai","Admin")" class="menu-link">
+                            <i class="menu-icon bx bx-user"></i>
+                            <div data-i18n="Analytics">Thống kê bài đăng</div>
                         </a>
                     </li>
 
