--- a/QL_CDC-master/QL_CDC/Views/TaiKhoan/DangNhap.cshtml
+++ b/QL_CDC-master/QL_CDC/Views/TaiKhoan/DangNhap.cshtml
@@ -121,7 +121,7 @@
 </head>
 
 <body>
-    <div class="container-xxl" >
+    <div class="container-xxl">
         <div class="authentication-wrapper authentication-basic container-p-y">
             <div class="authentication-inner">
                 <div class="card">
@@ -137,47 +137,53 @@
                             </a>
                         </div>
                         <h4 class="mb-4 ali">Welcome!</h4>
-                       <form id="formAuthentication" class="mb-3" asp-action="DangNhap" method="post">
-            <div class="mb-3">
-                <label for="email" class="form-label">Tài khoản</label>
-                <input type="text"
-                       class="form-control"
-                       id="tk"
-                       asp-for="MSSV"
-                       autofocus />
-            </div>
-            <div class="mb-3 form-password-toggle">
-                <div class="d-flex justify-content-between">
-                    <label class="form-label" for="password">Mật khẩu</label>
+                        <form id="formAuthentication" class="mb-3" asp-action="DangNhap" method="post">
+                            <div class="mb-3">
+                                <label for="email" class="form-label">Tài khoản</label>
+                                <input type="text"
+                                       class="form-control"
+                                       id="tk"
+                                       asp-for="MSSV"
+                                       autofocus />
+                            </div>
+                            <div class="mb-3 form-password-toggle">
+                                <div class="d-flex justify-content-between">
+                                    <label class="form-label" for="password">Mật khẩu</label>
 
-                </div>
-                <div class="input-group input-group-merge">
-                    <input type="password"
-                           id="mk"
-                           class="form-control"
-                           asp-for="MatKhau"
-                           placeholder="&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;"
-                           aria-describedby="password" />
-                    <span class="input-group-text cursor-pointer"><i class="bx bx-hide"></i></span>
-                </div>
-            </div>
-            <div class="mb-3">
-                <div class="form-check">
-                    <input class="form-check-input" type="checkbox" id="remember-me" />
-                    <label class="form-check-label" for="remember-me"> Nhớ tài khoản </label>
-                </div>
-            </div>
-            <div class="mb-3">
-                <button type="submit" class="btn btn-primary" style="margin-left: 10vw;margin-top: 20px">Đăng nhập</button>
-            </div>
-        </form>
+                                </div>
+                                <div class="input-group input-group-merge">
+                                    <input type="password"
+                                           id="mk"
+                                           class="form-control"
+                                           asp-for="MatKhau"
+                                           placeholder="&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;"
+                                           aria-describedby="password" />
+                                    <span class="input-group-text cursor-pointer"><i class="bx bx-hide"></i></span>
+                                </div>
+                            </div>
+                            <div class="mb-3">
+                                <div class="form-check">
+                                    <input class="form-check-input" type="checkbox" id="remember-me" />
+                                    <label class="form-check-label" for="remember-me"> Nhớ tài khoản </label>
+                                </div>
+                            </div>
+                            <div class="mb-3">
+                                <button type="submit" class="btn btn-primary" style="margin-left: 10vw;margin-top: 20px">Đăng nhập</button>
+                            </div>
+                        </form>
 
 
-                
+
                         <p class="text-center">
                             <span>Bạn chưa có tài khoản?</span>
                             <a href="@Url.Action("DangKy","TaiKhoan")">
                                 <span>Đăng ký</span>
+                            </a>
+                        </p>
+                        <p style="margin-left:135px">
+                            <span></span>
+                            <a href="@Url.Action("DangKy","TaiKhoan")">
+                                <span>Quên mật khẩu</span>
                             </a>
                         </p>
                     </div>
