--- a/QL_CDC-master/QL_CDC/Views/TaiKhoan/ThongTinTaiKhoan.cshtml
+++ b/QL_CDC-master/QL_CDC/Views/TaiKhoan/ThongTinTaiKhoan.cshtml
@@ -4,11 +4,11 @@
     Layout = "~/Views/Shared/_ThirdLayout.cshtml";
 }
 
-<div class="container-fluid pt-5">
+<div class="container-fluid pt-5" style="margin-top:-50px">
     <div class="text-center mb-4">
         <h2 class="section-title px-5"><span class="px-2">Thông tin cá nhân</span></h2>
     </div>
-    <div class="row px-xl-5 pb-3 thongtincanhan">
+    <div class="row px-xl-5 pb-3 ">
         <div class="col-lg-12">
             <div class="mb-4">
                 <div class="row">
