--- a/QL_CDC-master/QL_CDC/Views/Shared/_TimKiemLayout.cshtml
+++ b/QL_CDC-master/QL_CDC/Views/Shared/_TimKiemLayout.cshtml
@@ -112,9 +112,7 @@
         <div class="row border-top border-light mx-xl-5 py-4">
             <div class="col-md-6 px-xl-0">
                 <p class="mb-md-0 text-center text-md-left text-dark">
-                    &copy; <a class="text-dark font-weight-semi-bold" href="#">CDC - Chợ đồ cũ sinh viên</a>. Thiết kế
-                    bởi
-                    <a class="text-dark font-weight-semi-bold" href="https://htmlcodex.com">HTML Codex</a>
+                    &copy; <a class="text-dark font-weight-semi-bold" href="#">CDC - Chợ rao vặt sinh viên</a>
                 </p>
             </div>
         </div>
