--- a/QL_CDC-master/QL_CDC/Views/GioHang/GioHang.cshtml
+++ b/QL_CDC-master/QL_CDC/Views/GioHang/GioHang.cshtml
@@ -7,11 +7,11 @@
 
 <!-- Cart Start -->
 <div class="text-center mb-4" >
-    <h2 class="section-title px-5"><span class="px-2">Giỏ hàng</span></h2>
+    <h2 class="section-title px-5" style="margin-top:-10px"><span class="px-2">Giỏ hàng</span></h2>
 </div>
 @if (Model.SanPham.Count() != 0)
 {
-    <div class="container-fluid pt-5" style=" margin-top: -50px; margin-left: 0px">
+    <div class="container-fluid pt-5" style=" margin-top: -30px; margin-left: 0px">
         <div class="row px-xl-5">
             <div class="col-lg-8 table-responsive mb-5">
                 <table class="table table-bordered text-center mb-0">
